--- a/package.json
+++ b/package.json
@@ -12,17 +12,14 @@
   "scripts": {
     "prepare": "gulp all:tsconfig.json && gulp :tslint.json && gulp dist",
     "prestart": "gulp example:build",
-    "start": "node --experimental-modules build/example/example/main.js",
+    "start": "node --experimental-modules dist/src/example/example/main.js",
+    "compile:watch": "tsc -watch -p ./",
+    "compile": "tsc -p ./",
     "pretest": "gulp :lint && gulp lib:build",
     "test": "gulp test",
     "test-online": "OCILO_TEST_ONLINE=true npm test",
     "prepublishOnly": "npm run test-online",
     "lint": "gulp :lint:fix"
-  },
-  "pre-commit": {
-    "run": [
-      "test"
-    ]
   },
   "keywords": [
     "Skype",
@@ -41,8 +38,8 @@
     "cheerio": "^1.0.0-rc.2",
     "incident": "^3.1.1",
     "js-sha256": "^0.9.0",
-    "kryo": "^0.6.1",
-    "lodash": "^4.17.5",
+    "kryo": "^0.8.1",
+    "lodash": "^4.17.15",
     "request": "^2.83.0",
     "tough-cookie": "^2.3.3"
   },
@@ -50,7 +47,7 @@
     "@types/chai": "^4.1.2",
     "@types/minimist": "^1.2.0",
     "@types/mocha": "^2.2.48",
-    "@types/node": "^9.4.6",
+    "@types/node": "^9.6.55",
     "chai": "^4.1.2",
     "del": "^3.0.0",
     "fs-extra": "^5.0.0",
@@ -59,11 +56,10 @@
     "gulp-cli": "^2.0.1",
     "minimist": "^1.2.0",
     "mocha": "^5.0.1",
-    "pre-commit": "^1.2.2",
     "ts-node": "^4.1.0",
     "tslint": "^5.9.1",
-    "turbo-gulp": "^0.16.2",
-    "typescript": "2.7.0-rc"
+    "turbo-gulp": "^0.20.2",
+    "typescript": "^3.6.4"
   },
   "nyc": {
     "include": [
