--- a/package.json
+++ b/package.json
@@ -10,16 +10,11 @@
     "url": "git://github.com/ocilo/skype-http.git"
   },
   "scripts": {
-    "prepare": "gulp all:tsconfig.json && gulp :tslint.json && gulp dist",
-    "prestart": "gulp example:build",
-    "start": "node --experimental-modules dist/src/example/example/main.js",
+    "start": "node dist/src/example/example/main.js",
     "compile:watch": "tsc -watch -p ./",
     "compile": "tsc -p ./",
-    "pretest": "gulp :lint && gulp lib:build",
     "test": "gulp test",
-    "test-online": "OCILO_TEST_ONLINE=true npm test",
-    "prepublishOnly": "npm run test-online",
-    "lint": "gulp :lint:fix"
+    "test-online": "OCILO_TEST_ONLINE=true npm test"
   },
   "keywords": [
     "Skype",
