--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "description": "Unofficial Skype API for Node.js via HTTP",
   "version": "0.0.15",
   "license": "MIT",
-  "main": "dist/lib/index",
-  "types": "dist/lib/index.d.ts",
+  "main": "dist/src/lib/index",
+  "types": "dist/src/lib/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git://github.com/ocilo/skype-http.git"
