--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "Skype-HTTP"
   ],
   "dependencies": {
+    "@types/camelcase-keys": "^5.1.1",
     "@types/cheerio": "^0.22.7",
     "@types/form-data": "^2.2.1",
     "@types/lodash": "^4.14.102",
@@ -30,6 +31,7 @@
     "async-file": "^2.0.2",
     "big-integer": "^1.6.26",
     "bluebird": "^3.5.1",
+    "camelcase-keys": "^6.1.0",
     "cheerio": "^1.0.0-rc.2",
     "incident": "^3.1.1",
     "js-sha256": "^0.9.0",
